// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`screens/Match/StadiumTooltip render with no image if not provided 1`] = `
<div
  className="stadium-tooltip"
>
  <div
    className="stadium-tooltip-title"
  >
    <div>
      Stade Krestovski
    </div>
    <div>
      •
    </div>
    <div>
      Saint-Pétersbourg
    </div>
  </div>
  <div
    className="stadium-tooltip-title"
  >
    <div>
      Capacité
    </div>
    <div>
      69500
       places
    </div>
  </div>
</div>
`;

exports[`screens/Match/StadiumTooltip renders correctly 1`] = `
<div
  className="stadium-tooltip"
>
  <div
    className="stadium-tooltip-title"
  >
    <div>
      Stade Krestovski
    </div>
    <div>
      •
    </div>
    <div>
      Saint-Pétersbourg
    </div>
  </div>
  <img
    alt="Stade Krestovski"
    className="stadium-tooltip-photo"
    src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/74/RUS-2016-Aerial-SPB-Krestovsky_Stadium_02.jpg/512px-RUS-2016-Aerial-SPB-Krestovsky_Stadium_02.jpg"
  />
  <div
    className="stadium-tooltip-title"
  >
    <div>
      Capacité
    </div>
    <div>
      69500
       places
    </div>
  </div>
</div>
`;
